<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/indentify_editText"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/summerize_issue"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/description_textView"
        android:layout_below="@+id/indentify_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_optional"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/description_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/summerize_issue"
        android:textSize="16sp"
        android:layout_below="@+id/description_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|left"
        android:maxLines="10"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_EditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ok_button"
            android:id="@+id/ok_button_identify"
            android:textAllCaps="true" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/cancel_button_identify"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textAllCaps="true" />
    </LinearLayout>
</RelativeLayout>